# python-poetry-template

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  dependabot_updates.yml  flake8.yml  github_release.yml  pylint.yml  pypi_deploy.yml  ruff.yml  unit_tests.yml
docs/: pull_request_template.md
logs/: project_name.log.jsonl
src/project_name/: __init__.py  config.py  lib.py  logger.py  logger_config.toml  main.py
tests/: conftest.py  test_default.py
